fix: UI of stock-keepers don't overflow into bins column + updated organizations.json

--- a/client/src/app/components/manage-stock-keepers-designation/manage-stock-keepers-designation.component.scss
+++ b/client/src/app/components/manage-stock-keepers-designation/manage-stock-keepers-designation.component.scss
@@ -16,55 +16,6 @@
   padding: 0.7em;
 }
 
-.mat-column-First_Name {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 10% !important;
-  justify-content:center;
-  width: 5% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-Last_Name {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 10% !important;
-  width: 15% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-Check_Boxes {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 10% !important;
-  width: 3% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
 .bottom-buttons {
   position: absolute;
   right: 1.5%;
@@ -116,22 +67,21 @@ button.bottom-assign {
   position: inline;
   left: 0;
   margin-left: -11px;
+  display:flex;
+  justify-content:space-around;
 }
 
 .drag-drop-containers {
-  display: flex;
-  justify-content: space-evenly;
-  width: 500px;
-  max-width: 100%;
-  margin: 0 100px 25px 100px;
-  padding: 20 25px 25px 20;
-  display: inline-block;
+  width: 100%;
+  display:flex;
+  justify-content:space-around;
+  box-sizing: border-box;
+  justify-content: center;
   vertical-align: top;
-  text-align: center;
+  text-align: justify;
   font-size: 30px;
   color: black;
 }
-
 
 .drag-drop-list {
   flex-direction: row;
@@ -139,7 +89,6 @@ button.bottom-assign {
   min-height: 60px;
   background: rgb(236, 236, 236);
   border-radius: 4px;
-  margin-left: 50px;
   width: 400px;
 }
 
@@ -153,7 +102,6 @@ button.bottom-assign {
   margin: auto;
   margin-bottom: 10px;
   margin-top: 10px;
-  padding: .25em;
   width: 90%;
   padding: 20px 10px;
   text-align: center;
@@ -203,7 +151,28 @@ button.bottom-assign {
   float: left;
   width: 50%;
   padding: 10px;
+  display: inline-block;
+}
+
+.boarder-left {
+  border-left: 1px solid #E0E0E0;
+}
+
+.boarder-right {
   border-right: 1px solid #E0E0E0;
+}
+
+.column-header {
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
+
+.row {
+  background-image: linear-gradient(#E0E0E0, #E0E0E0);
+  background-size: 1px 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 /* Clear floats after the columns */
